--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ label {
   background-color: var(--mainWhite);
   line-height: 1.5rem;
   padding: 10px 20px;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
   border: 1px solid #e0e0e0;
   display: flex;
   justify-content: space-between;
